--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material-ui/core": "^4.11.1",
     "formik": "^2.2.5",
     "gatsby": "^2.26.1",
+    "gatsby-plugin-create-client-paths": "^2.5.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
